Bug #9784
loader: multiboot.c has unused variables and function
Start date:
2018-09-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
build errors with warnings enabled:
multiboot.c: In function 'multiboot_exec': multiboot.c:249:26: error: unused variable 'kernend' [-Werror=unused-variable] vm_offset_t modulep, kernend, entry; ^~~~~~~ multiboot.c:249:17: error: unused variable 'modulep' [-Werror=unused-variable] vm_offset_t modulep, kernend, entry; ^~~~~~~ multiboot.c:248:31: error: unused variable 'metadata_size' [-Werror=unused-variable] vm_offset_t module_start, metadata_size; ^~~~~~~~~~~~~ multiboot.c:248:17: error: unused variable 'module_start' [-Werror=unused-variable] vm_offset_t module_start, metadata_size; ^~~~~~~~~~~~ multiboot.c: In function 'multiboot_obj_loadfile': multiboot.c:467:24: error: unused variable 'kmp' [-Werror=unused-variable] struct kernel_module *kmp; ^~~ At top level: multiboot.c:95:1: error: 'max_addr' defined but not used [-Werror=unused-function] max_addr(void) ^~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 6649cbcc75f82cb221ebe2ee6f5afc2001249848
commit 6649cbcc75f82cb221ebe2ee6f5afc2001249848 Author: Toomas Soome <tsoome@me.com> Date: 2018-09-10T13:01:14.000Z 9784 loader: multiboot.c has unused variables and function Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>