usr/src/boot/sys/boot/i386/libi386/multiboot.c
@@ -90,20 +90,6 @@ num_modules(struct preloaded_file *kfp)
 	return (mod_num);
 }
 
-static vm_offset_t
-max_addr(void)
-{
-	struct preloaded_file	*fp;
-	vm_offset_t		 addr = 0;
-
-	for (fp = file_findfile(NULL, NULL); fp != NULL; fp = fp->f_next) {
-		if (addr < (fp->f_addr + fp->f_size))
-			addr = fp->f_addr + fp->f_size;
-	}
-
-	return (addr);
-}
-
 static int
 multiboot_loadfile(char *filename, u_int64_t dest,
     struct preloaded_file **result)
@@ -244,8 +230,7 @@ static int
 multiboot_exec(struct preloaded_file *fp)
 {
 	struct preloaded_file		*mfp;
-	vm_offset_t			 module_start, metadata_size;
-	vm_offset_t			 modulep, kernend, entry;
+	vm_offset_t			 entry;
 	struct file_metadata		*md;
 	struct multiboot_info		*mb_info = NULL;
 	struct multiboot_mod_list	*mb_mod = NULL;
@@ -460,7 +445,6 @@ multiboot_obj_loadfile(char *filename, u_int64_t dest,
     struct preloaded_file **result)
 {
 	struct preloaded_file	*mfp, *kfp, *rfp;
-	struct kernel_module	*kmp;
 	int			 error, mod_num;
 
 	/* See if there's a aout multiboot kernel loaded */
